// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Snapshot: Circled 1`] = `
<div
  key="2"
>
  <Icon
    circle={true}
    key="xxs"
    shape="cog"
    size="xxs"
  />
  <Icon
    circle={true}
    key="xs"
    shape="cog"
    size="xs"
  />
  <Icon
    circle={true}
    key="s"
    shape="cog"
    size="s"
  />
  <Icon
    circle={true}
    key="m"
    shape="cog"
    size="m"
  />
  <Icon
    circle={true}
    key="l"
    shape="cog"
    size="l"
  />
  <Icon
    circle={true}
    key="xl"
    shape="cog"
    size="xl"
  />
  <Icon
    circle={true}
    key="xxl"
    shape="cog"
    size="xxl"
  />
</div>
`;

exports[`Icon Snapshot: Circled color 1`] = `
<div
  key="3"
>
  <Icon
    circle={true}
    color="blue"
    key="xxs"
    shape="cog"
    size="xxs"
  />
  <Icon
    circle={true}
    color="blue"
    key="xs"
    shape="cog"
    size="xs"
  />
  <Icon
    circle={true}
    color="blue"
    key="s"
    shape="cog"
    size="s"
  />
  <Icon
    circle={true}
    color="blue"
    key="m"
    shape="cog"
    size="m"
  />
  <Icon
    circle={true}
    color="blue"
    key="l"
    shape="cog"
    size="l"
  />
  <Icon
    circle={true}
    color="blue"
    key="xl"
    shape="cog"
    size="xl"
  />
  <Icon
    circle={true}
    color="blue"
    key="xxl"
    shape="cog"
    size="xxl"
  />
</div>
`;

exports[`Icon Snapshot: Regular 1`] = `
<div
  key="1"
>
  <Icon
    key="xxs"
    shape="cog"
    size="xxs"
  />
  <Icon
    key="xs"
    shape="cog"
    size="xs"
  />
  <Icon
    key="s"
    shape="cog"
    size="s"
  />
  <Icon
    key="m"
    shape="cog"
    size="m"
  />
  <Icon
    key="l"
    shape="cog"
    size="l"
  />
  <Icon
    key="xl"
    shape="cog"
    size="xl"
  />
  <Icon
    key="xxl"
    shape="cog"
    size="xxl"
  />
</div>
`;
